--- a/Aura.com/src/Components/ReturnPolicy.css
+++ b/Aura.com/src/Components/ReturnPolicy.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap');
+
+
 .return-section {
   padding: 5rem 1.5rem;
   background: linear-gradient(145deg, #fdfcfb, #e8f1f8);
