--- a/Aura.com/src/Components/WhyChooseUs.css
+++ b/Aura.com/src/Components/WhyChooseUs.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap');
 
 /* ======== Senior-friendly section ======== */
 .why-choose-section {
